force-app/main/default/objects/Monthly_Report__c/Monthly_Report__c.object-meta.xml
<CustomObject>
    <label>Monthly Report</label>
    <nameField>
        <label>ID (Link)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>