force-app/main/default/objects/Monthly_Report__c/fields/Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Amount__c</fullName>
    <label>Adjusted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>