force-app/main/default/objects/Monthly_Report__c/fields/Adjustment_Note__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Note__c</fullName>
    <label>Adjustment Note</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>