force-app/main/default/objects/Monthly_Report__c/fields/BI_Calculated_Amount__c.field-meta.xml
<CustomField>
    <fullName>BI_Calculated_Amount__c</fullName>
    <label>BI Calculated Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>