force-app/main/default/objects/Monthly_Report__c/fields/Calculated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calculated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>