force-app/main/default/objects/Monthly_Report__c/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <description>MONTH( DATEVALUE(LastModifiedDate)  )</description>
    <formula>MONTH(TODAY())=  Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month</label>
    <type>Checkbox</type>
</CustomField>