force-app/main/default/objects/Monthly_Report__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>TEXT(Month__c) +&quot;/&quot;+TEXT(Year__c)</formula>
    <label>Date</label>
    <type>Text</type>
</CustomField>