force-app/main/default/objects/Monthly_Report__c/fields/Date_type_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_type_Date__c</fullName>
    <formula>DATE(Year__c, Month__c,   01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date type Date</label>
    <type>Date</type>
</CustomField>