force-app/main/default/objects/Monthly_Report__c/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <formula>IF(
(IF( Adjusted_Amount__c  &gt; 0, Adjusted_Amount__c,   Calculated_Amount__c  )&gt; Price_Plan__r.Cap__c) &amp;&amp;Price_Plan__r.Cap__c&gt;0,Price_Plan__r.Cap__c,
IF( Adjusted_Amount__c  &gt; 0, Adjusted_Amount__c,   Calculated_Amount__c  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>