force-app/main/default/objects/Monthly_Report__c/fields/Fix_DAU__c.field-meta.xml
<CustomField>
    <fullName>Fix_DAU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fix DAU</label>
    <type>Checkbox</type>
</CustomField>