force-app/main/default/objects/Monthly_Report__c/fields/Last_month_average_DAU_for_ROW_countries__c.field-meta.xml
<CustomField>
    <fullName>Last_month_average_DAU_for_ROW_countries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Month average DAU for ROW countries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>