force-app/main/default/objects/Monthly_Report__c/fields/Last_month_payment_for_Tier1_countr__c.field-meta.xml
<CustomField>
    <fullName>Last_month_payment_for_Tier1_countr__c</fullName>
    <formula>IF(   CONTAINS(RecordType.DeveloperName, &quot;Static&quot;)  ,

Final_Amount__c *( Last_month_aver_DAU_for_TOP15_countries__c / Total_DAU__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month payment for Tier1 countries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>