force-app/main/default/objects/Monthly_Report__c/fields/Previous_Month__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month__c</fullName>
    <formula>Month__c = Opportunity__r.SYS_Previous_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Month?</label>
    <type>Checkbox</type>
</CustomField>