force-app/main/default/objects/Monthly_Report__c/fields/Price_Plan__c.field-meta.xml
<CustomField>
    <fullName>Price_Plan__c</fullName>
    <label>Price Plan</label>
    <referenceTo>Price_Plan__c</referenceTo>
    <relationshipLabel>Monthly Reports</relationshipLabel>
    <relationshipName>Month_Reports</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>