force-app/main/default/objects/Monthly_Report__c/recordTypes/Static_Monthly.recordType-meta.xml
<RecordType>
    <fullName>Static_Monthly</fullName>
    <active>true</active>
    <label>Static Monthly</label>
</RecordType>