force-app/main/default/objects/Monthly_Report__c/recordTypes/Strategic_Bus_Dev.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Bus_Dev</fullName>
    <active>true</active>
    <label>Strategic Bus Dev</label>
</RecordType>